--- a/tp1htmlbasicoxdd.html
+++ b/tp1htmlbasicoxdd.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV del DOC</title>
+    <div></div>
 </head>
 <body>
 
@@ -16,7 +17,7 @@
  <main>
           <section>
             <h2>   
-                <p> nombre y apellido: roberto armando faso
+                <p> 
                 nacio:el 25 de diciembre del 1966 
                 en el barrio de once 
             </p> 
@@ -33,9 +34,23 @@
 
       <main>
         <h2> primario: terminado en martina silva del gurruchaga 22 D.E 6 
-        secundario: terminado en cfp6 C.I.F.P.A</h2> 
-        <p> soy albañil experto en negocios y muy buen contador,catador </p>
+        secundario: terminado en cfp6 C.I.F.P.A          
+        soy albañil experto en negocios y muy buen contador,catador 
+    </h2>
+
         
+        <h3>
+<li> <p>me apodan el bartu</p> </li>
+<li> <p>soy de riverr papaa</p> </li>
+<li><p>tengo 2 gatos y 3 perros</p> </li>
+        </h3>
+ 
+        <h4>HABILIDADES Y DESTREZAS</h4>
+        
+<br>
+
+
+
     </main>
 
 
